GNOME Bugzilla – Bug 700691
Do not use X11 if not running inside an X session
Last modified: 2013-05-20 10:05:59 UTC
When running Epiphany on Wayland I get a crash on startup. This is because of some code to compute a timestamp that assumes we are running on X.
Created attachment 244753 [details] [review] Patch Make sure that user time fallback code only runs when we are indeed inside an X session. This patch enables Epiphany to start and run in Wayland.
Review of attachment 244753 [details] [review]: This is obviously better than crashing, but ideally we should re-implement the same functionality somehow :) Maybe add a FIXME or something.
Added a FIXME and pushed. commit d5ddd68f50bafcbdc45870ef7f8f92f57e516587 Author: Iago Toral Quiroga <itoral@igalia.com> Date: Mon May 20 09:07:10 2013 +0200 Make sure we only rely on X11 to obtain timestamps when we are running in a X session This avoids a startup crash when running on Wayland. https://bugzilla.gnome.org/show_bug.cgi?id=700691