Make sure we only rely on X11 to obtain timestamps when we are running in a X session

This avoids a startup crash when running on Wayland.

https://bugzilla.gnome.org/show_bug.cgi?id=700691